salesforce/force-app/main/default/objects/Lead/fields/AI_Call_Consent_Source__c.field-meta.xml
<CustomField>
    <fullName>AI_Call_Consent_Source__c</fullName>
    <description>Where AI-call consent came from: Text Reply, Email Reply, Web Form, Inbound Call, or Rep (a person ticked AI Call Consent). Set by AI Outreach together with AI Call Consent. The values are written by code - do not rename them. (Outreach spec 2026-10-04, section 11.1.)</description>
    <inlineHelpText>Where this person agreed to calls from our AI assistant. Choose Rep when you tick AI Call Consent yourself.</inlineHelpText>
    <label>AI Call Consent Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text Reply</fullName>
            </value>
            <value>
                <fullName>Email Reply</fullName>
            </value>
            <value>
                <fullName>Web Form</fullName>
            </value>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>