salesforce/force-app/main/default/objects/Lead/fields/AI_Last_Call_Changes__c.field-meta.xml
<CustomField>
    <fullName>AI_Last_Call_Changes__c</fullName>
    <description>Written by AI Outreach after each AI call: every field it changed on this record (old → new), what it created (appointment, task, Chatter post) and what it left alone. Overwritten by the next AI call. (Plan 1D, docs/superpowers/specs/2026-10-06-ai-call-context-booking-writeback-design.md §5.5.)</description>
    <inlineHelpText>What the AI assistant changed after its last call with this person. Do not edit by hand: the next AI call overwrites it.</inlineHelpText>
    <label>AI Last Call Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>