salesforce/force-app/main/default/objects/Lead/fields/Skip_on_Dialer__c.field-meta.xml
<CustomField>
    <fullName>Skip_on_Dialer__c</fullName>
    <label>Skip on Dialer</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Checked = the CTI power dialer never auto-dials this record. Manual click-to-dial is unaffected. (CTI launch spec 2026-08-24, item 6.)</description>
</CustomField>